[package]
name = "story-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = "0.27"
dotenvy = "0.15"
ratatui = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
